# data-and-ml-governance-workshop

./: .gitignore  README.md
module-1/account-bootstrap-service-catalog-repo/: README.md  app.py  cdk.context.json  cdk.json  pyproject.toml  requirements.txt
module-1/account-bootstrap-service-catalog-repo/cdk_pipelines/: cdk_pipelines.py
module-1/account-bootstrap-service-catalog-repo/service_catalog/: account_bootstrap_portfolio.py
module-1/account-bootstrap-service-catalog-repo/service_catalog/account_bootstrap_products/constructs/: non_prod_infra.py  prod_infra.py  sm_roles.py
module-1/account-bootstrap-service-catalog-repo/service_catalog/ml_account_products/: ml_play_account_networking_stack.py  ml_play_shared_services_account_stack.py  ml_restricted_account_networking_stack.py  ml_restricted_shared_services_account_stack.py
module-3/: README.md
module-3/ml-admin-portfolio/: README.md  app.py  bootstrap-template.json  cdk.json  pyproject.toml  requirements-dev.txt
module-3/ml-admin-portfolio/cdk_pipelines/: cdk_pipelines.py
module-3/ml-admin-portfolio/common_infra/: common_infra_stack.py  model_sync_construct.py  sagemaker_service_catalog_roles_construct.py
module-3/ml-admin-portfolio/functions/model_sync/: index.py
module-3/ml-admin-portfolio/service_catalog/: ml_admin_portfolio.py
module-3/ml-admin-portfolio/service_catalog/constructs/: networking.py  sagemaker_roles_construct.py
module-3/ml-admin-portfolio/service_catalog/ml_admin_products/: sagemaker_studio_domain.py
module-4/: bank-marketing-cfs-athena-access.ipynb  (+3 more)
(+70 files in other folders)
