[tool.poetry]
name = "ml-admin-portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.117.0"
aws-cdk-aws-lambda-python-alpha = "^2.117.0a0"
constructs = "^10.3.0"
cdk-stacksets = "^0.0.149"
cdk-nag = "^2.28.139"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.11"
cfnresponse = "^1.1.2"
awswrangler = "^3.4.2"
pandas = "^2.1.4"
pyyaml = "^6.0.1"
sagemaker = "^2.203.0"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.31.0"}
boto3-stubs = {extras = ["essential", "sagemaker"], version = "^1.34.20"}
yamldataclassconfig = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
